# torchcachex

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  benchmark.py  pyproject.toml  test_import.py
.github/workflows/: ci.yml  publish.yml
conf/cache/: unified.yaml
conf/feature_cache/: default.yaml  manual.yaml  strict.yaml
conf/feature_set/: cheeger.yaml  filtered.yaml  filtered.yaml.backup  simple.yaml  simple.yaml.backup
conf/feature_store/: composite.yaml  composite.yaml.backup  file.yaml  file.yaml.backup  memory.yaml  memory.yaml.backup
conf/model_registry/: default.yaml
conf/preprocessor_cache/: default.yaml  manual_override.yaml  permissive.yaml  strict.yaml
docs/adrs/: 001-streaming-arrow-writer.md  002-svd-architecture-info.md  README.md
examples/: README.md  advanced_usage.py  basic_usage.py  cli_integration.py  minimal_example.py
src/shade_io/: __init__.py
src/shade_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shade_io/adapters/: __init__.py  feature_extractor_adapter.py
src/shade_io/feature_sets/: __init__.py  base.py  decorators.py  filters.py
src/shade_io/interfaces/: __init__.py  core.py
src/shade_io/migration/: __init__.py  migrate_registries.py
src/shade_io/processor/: __init__.py  feature_processor.py
src/shade_io/registry/: __init__.py  feature_registry.py  model_registry.py  unified_registry.py
src/shade_io/stores/: __init__.py  composite.py  file.py  memory.py  streaming_arrow.py
src/torchcachex/: __init__.py  backend.py  decorator.py  utils.py
tests/: __init__.py  conftest.py  test_backend.py  test_decorator.py  test_edge_cases.py  test_integration.py  test_recovery.py  test_scale.py  test_utils.py
